--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
 				</p>
 				<div class="artists-catalog" id="accordion">
 					<div class="artists-catalog__subsection">
-						<h3 class="artists-catalog__heading text-block-reset">C 1400 по 1499 гг.</h3>
-						<button class="artists-catalog__btn" aria-label="Развернуть"></button>
+						<h3 class="artists-catalog__heading selectable text-block-reset" tabindex=0>C 1400 по 1499 гг.</h3>
+						<button class="artists-catalog__btn selectable link-reset" aria-label="Развернуть"></button>
 					</div>
 					<div>
 						<ul class="artists-catalog__list ul-reset">
@@ -313,8 +313,8 @@
 						</ul>
 					</div>
 					<div class="artists-catalog__subsection">
-						<h3 class="artists-catalog__heading text-block-reset">C 1500 по 1599 гг.</h3>
-						<button class="artists-catalog__btn" aria-label="Развернуть"></button>
+						<h3 class="artists-catalog__heading selectable text-block-reset" tabindex=0>C 1500 по 1599 гг.</h3>
+						<button class="artists-catalog__btn selectable link-reset" aria-label="Развернуть"></button>
 					</div>
 					<div>
 						<ul class="artists-catalog__list ul-reset">
@@ -345,8 +345,8 @@
 						</ul>
 					</div>
 					<div class="artists-catalog__subsection">
-						<h3 class="artists-catalog__heading text-block-reset">C 1600 по 1699 гг.</h3>
-						<button class="artists-catalog__btn" aria-label="Развернуть"></button>
+						<h3 class="artists-catalog__heading selectable text-block-reset" tabindex=0>C 1600 по 1699 гг.</h3>
+						<button class="artists-catalog__btn selectable link-reset" aria-label="Развернуть"></button>
 					</div>
 					<div>
 						<ul class="artists-catalog__list ul-reset">
@@ -377,8 +377,8 @@
 						</ul>
 					</div>
 					<div class="artists-catalog__subsection">
-						<h3 class="artists-catalog__heading text-block-reset">C 1700 по 1799 гг.</h3>
-						<button class="artists-catalog__btn" aria-label="Развернуть"></button>
+						<h3 class="artists-catalog__heading selectable text-block-reset" tabindex=0>C 1700 по 1799 гг.</h3>
+						<button class="artists-catalog__btn selectable link-reset" aria-label="Развернуть"></button>
 					</div>
 					<div>
 						<ul class="artists-catalog__list ul-reset">
@@ -409,8 +409,8 @@
 						</ul>
 					</div>
 					<div class="artists-catalog__subsection">
-						<h3 class="artists-catalog__heading text-block-reset">C 1800 по 1899 гг.</h3>
-						<button class="artists-catalog__btn" aria-label="Развернуть"></button>
+						<h3 class="artists-catalog__heading selectable text-block-reset" tabindex=0>C 1800 по 1899 гг.</h3>
+						<button class="artists-catalog__btn selectable link-reset" aria-label="Развернуть"></button>
 					</div>
 					<div>
 						<ul class="artists-catalog__list ul-reset">
@@ -441,8 +441,8 @@
 						</ul>
 					</div>
 					<div class="artists-catalog__subsection">
-						<h3 class="artists-catalog__heading text-block-reset">C 1900 по 1999 гг.</h3>
-						<button class="artists-catalog__btn" aria-label="Развернуть"></button>
+						<h3 class="artists-catalog__heading selectable text-block-reset" tabindex=0>C 1900 по 1999 гг.</h3>
+						<button class="artists-catalog__btn selectable link-reset" aria-label="Развернуть"></button>
 					</div>
 					<div>
 						<ul class="artists-catalog__list ul-reset">
@@ -473,8 +473,8 @@
 						</ul>
 					</div>
 					<div class="artists-catalog__subsection">
-						<h3 class="artists-catalog__heading text-block-reset">C 2000 г.</h3>
-						<button class="artists-catalog__btn" aria-label="Развернуть"></button>
+						<h3 class="artists-catalog__heading selectable text-block-reset" tabindex=0>C 2000 г.</h3>
+						<button class="artists-catalog__btn selectable link-reset" aria-label="Развернуть"></button>
 					</div>
 					<div>
 						<ul class="artists-catalog__list ul-reset">
