--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 					<ul class="flags ul-reset">
 						<li class="flags__item"><a class="flags__button flags__button_france link-reset" href="#tabs-1" aria-label="Франция"></a></li>
 						<li class="flags__item"><a class="flags__button flags__button_germany link-reset" href="#tabs-2" aria-label="Германия"></a></li>
-						<li class="flags__item"><a class="flags__button flags__button_italy link-reset" href="#tabs-3" aria-label="Италия"></a></li>
+						<li class="flags__item active"><a class="flags__button flags__button_italy link-reset" href="#tabs-3" aria-label="Италия"></a></li>
 						<li class="flags__item"><a class="flags__button flags__button_russia link-reset" href="#tabs-4" aria-label="Россия"></a></li>
 						<li class="flags__item"><a class="flags__button flags__button_belgium link-reset" href="#tabs-5" aria-label="Бельгия"></a></li>
 					</ul>
@@ -291,53 +291,50 @@
 								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="manet">Эдуард Мане</a></li>
 							</ul>
 						</div>
+						<div class="artists-catalog__subsection">
+							<h3 class="artists-catalog__heading selectable text-block-reset" tabindex=0>C 1900 по 1999 гг.</h3>
+							<button class="artists-catalog__btn selectable link-reset" aria-label="Развернуть"></button>
+						</div>
+						<div>
+							<ul class="artists-catalog__list ul-reset">
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="duchamp">Марсель Дюшан</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="picasso">Пабло Пикассо</a></li>
+							</ul>
+						</div>
 					</div>
 					<div class="artist-details">
 						<picture class="artist-details__picture">
-							<source media="(min-width: 1650px)" srcset="img/catalog/monet-desktop.jpg">
-							<source media="(min-width: 768px)" srcset="img/catalog/monet-tablet.jpg">
-							<img class="artist-details__img" src="img/catalog/monet-mobile.jpg" alt="Картина выбранного художника">
+							<source media="(min-width: 1650px)" srcset="">
+							<source media="(min-width: 768px)" srcset="">
+							<img class="artist-details__img" src="" alt="Картина выбранного художника">
 						</picture>
-						<h3 class="artist-details__heading text-block-reset">Клод Моне</h3>
-						<p class="artist-details__subtext text-block-reset">14 ноября 1840 — 5 декабря 1926.</p>
+						<h3 class="artist-details__heading text-block-reset"></h3>
+						<p class="artist-details__subtext text-block-reset"></p>
 						<p class="artist-details__text text-block-reset">
-							Оскар Клод Моне — французский живописец, один из основателей импрессионизма. Оскар Клод Моне родился 14 ноября 1840 года в Париже.
-							Он был вторым ребёнком бакалейщика Клода Адольфа Моне и Луизы Жюстины (урождённой Обре). Когда мальчику было пять лет, семья
-							переехала в Нормандию, в Гавр. Отец хотел, чтобы Клод стал бакалейщиком и продолжил семейное дело. Юность Моне, как он сам отмечал впоследствии,
-							по существу, была юностью бродяги. Он проводил больше времени в воде и на скалах, чем в классе. Школа ему, по натуре недисциплинированному,
-							всегда казалась тюрьмой. Он развлекался, разрисовывая голубые обложки тетрадей, и использовал их для портретов своих учителей, сделанных в
-							весьма непочтительной, карикатурной манере, и в этой забаве вскоре достиг совершенства. В пятнадцать лет Моне был известен всему Гавру как карикатурист.
 						</p>
 					</div>
 				</div>
 				<div class="artists-tab" id="tabs-2">
 					<div class="artists-catalog">
 						<div class="artists-catalog__subsection">
-							<h3 class="artists-catalog__heading selectable text-block-reset" tabindex=0>C 1800 по 1899 гг.</h3>
+							<h3 class="artists-catalog__heading selectable text-block-reset" tabindex=0>C 1500 по 1599 гг.</h3>
 							<button class="artists-catalog__btn selectable link-reset" aria-label="Развернуть"></button>
 						</div>
 						<div>
 							<ul class="artists-catalog__list ul-reset">
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Клод Моне</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Эдуард Мане</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="durer">Альбрехт Дюрер</a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="artist-details">
 						<picture class="artist-details__picture">
-							<source media="(min-width: 1650px)" srcset="img/catalog/monet-desktop.jpg">
-							<source media="(min-width: 768px)" srcset="img/catalog/monet-tablet.jpg">
-							<img class="artist-details__img" src="img/catalog/monet-mobile.jpg" alt="Картина выбранного художника">
+							<source media="(min-width: 1650px)" srcset="">
+							<source media="(min-width: 768px)" srcset="">
+							<img class="artist-details__img" src="" alt="Картина выбранного художника">
 						</picture>
-						<h3 class="artist-details__heading text-block-reset">Клод Моне</h3>
-						<p class="artist-details__subtext text-block-reset">14 ноября 1840 — 5 декабря 1926.</p>
+						<h3 class="artist-details__heading text-block-reset"></h3>
+						<p class="artist-details__subtext text-block-reset"></p>
 						<p class="artist-details__text text-block-reset">
-							Оскар Клод Моне — французский живописец, один из основателей импрессионизма. Оскар Клод Моне родился 14 ноября 1840 года в Париже.
-							Он был вторым ребёнком бакалейщика Клода Адольфа Моне и Луизы Жюстины (урождённой Обре). Когда мальчику было пять лет, семья
-							переехала в Нормандию, в Гавр. Отец хотел, чтобы Клод стал бакалейщиком и продолжил семейное дело. Юность Моне, как он сам отмечал впоследствии,
-							по существу, была юностью бродяги. Он проводил больше времени в воде и на скалах, чем в классе. Школа ему, по натуре недисциплинированному,
-							всегда казалась тюрьмой. Он развлекался, разрисовывая голубые обложки тетрадей, и использовал их для портретов своих учителей, сделанных в
-							весьма непочтительной, карикатурной манере, и в этой забаве вскоре достиг совершенства. В пятнадцать лет Моне был известен всему Гавру как карикатурист.
 						</p>
 					</div>
 				</div>
@@ -591,57 +588,54 @@
 						</div>
 						<div>
 							<ul class="artists-catalog__list ul-reset">
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Клод Моне</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Эдуард Мане</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="aivazovsky">Иван Айвазовский</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="brullov">Карл Брюллов</a></li>
+							</ul>
+						</div>
+						<div class="artists-catalog__subsection">
+							<h3 class="artists-catalog__heading selectable text-block-reset" tabindex=0>C 1900 по 1999 гг.</h3>
+							<button class="artists-catalog__btn selectable link-reset" aria-label="Развернуть"></button>
+						</div>
+						<div>
+							<ul class="artists-catalog__list ul-reset">
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="kandinsky">Василий Кандинский</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="malevich">Казимир Малевич</a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="artist-details">
 						<picture class="artist-details__picture">
-							<source media="(min-width: 1650px)" srcset="img/catalog/monet-desktop.jpg">
-							<source media="(min-width: 768px)" srcset="img/catalog/monet-tablet.jpg">
-							<img class="artist-details__img" src="img/catalog/monet-mobile.jpg" alt="Картина выбранного художника">
+							<source media="(min-width: 1650px)" srcset="">
+							<source media="(min-width: 768px)" srcset="">
+							<img class="artist-details__img" src="" alt="Картина выбранного художника">
 						</picture>
-						<h3 class="artist-details__heading text-block-reset">Клод Моне</h3>
-						<p class="artist-details__subtext text-block-reset">14 ноября 1840 — 5 декабря 1926.</p>
+						<h3 class="artist-details__heading text-block-reset"></h3>
+						<p class="artist-details__subtext text-block-reset"></p>
 						<p class="artist-details__text text-block-reset">
-							Оскар Клод Моне — французский живописец, один из основателей импрессионизма. Оскар Клод Моне родился 14 ноября 1840 года в Париже.
-							Он был вторым ребёнком бакалейщика Клода Адольфа Моне и Луизы Жюстины (урождённой Обре). Когда мальчику было пять лет, семья
-							переехала в Нормандию, в Гавр. Отец хотел, чтобы Клод стал бакалейщиком и продолжил семейное дело. Юность Моне, как он сам отмечал впоследствии,
-							по существу, была юностью бродяги. Он проводил больше времени в воде и на скалах, чем в классе. Школа ему, по натуре недисциплинированному,
-							всегда казалась тюрьмой. Он развлекался, разрисовывая голубые обложки тетрадей, и использовал их для портретов своих учителей, сделанных в
-							весьма непочтительной, карикатурной манере, и в этой забаве вскоре достиг совершенства. В пятнадцать лет Моне был известен всему Гавру как карикатурист.
 						</p>
 					</div>
 				</div>
 				<div class="artists-tab" id="tabs-5">
 					<div class="artists-catalog">
 						<div class="artists-catalog__subsection">
-							<h3 class="artists-catalog__heading selectable text-block-reset" tabindex=0>C 1800 по 1899 гг.</h3>
+							<h3 class="artists-catalog__heading selectable text-block-reset" tabindex=0>C 1900 по 1999 гг.</h3>
 							<button class="artists-catalog__btn selectable link-reset" aria-label="Развернуть"></button>
 						</div>
 						<div>
 							<ul class="artists-catalog__list ul-reset">
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Клод Моне</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Эдуард Мане</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="magritte">Рене Магритт</a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="artist-details">
 						<picture class="artist-details__picture">
-							<source media="(min-width: 1650px)" srcset="img/catalog/monet-desktop.jpg">
-							<source media="(min-width: 768px)" srcset="img/catalog/monet-tablet.jpg">
-							<img class="artist-details__img" src="img/catalog/monet-mobile.jpg" alt="Картина выбранного художника">
+							<source media="(min-width: 1650px)" srcset="">
+							<source media="(min-width: 768px)" srcset="">
+							<img class="artist-details__img" src="" alt="Картина выбранного художника">
 						</picture>
-						<h3 class="artist-details__heading text-block-reset">Клод Моне</h3>
-						<p class="artist-details__subtext text-block-reset">14 ноября 1840 — 5 декабря 1926.</p>
+						<h3 class="artist-details__heading text-block-reset"></h3>
+						<p class="artist-details__subtext text-block-reset"></p>
 						<p class="artist-details__text text-block-reset">
-							Оскар Клод Моне — французский живописец, один из основателей импрессионизма. Оскар Клод Моне родился 14 ноября 1840 года в Париже.
-							Он был вторым ребёнком бакалейщика Клода Адольфа Моне и Луизы Жюстины (урождённой Обре). Когда мальчику было пять лет, семья
-							переехала в Нормандию, в Гавр. Отец хотел, чтобы Клод стал бакалейщиком и продолжил семейное дело. Юность Моне, как он сам отмечал впоследствии,
-							по существу, была юностью бродяги. Он проводил больше времени в воде и на скалах, чем в классе. Школа ему, по натуре недисциплинированному,
-							всегда казалась тюрьмой. Он развлекался, разрисовывая голубые обложки тетрадей, и использовал их для портретов своих учителей, сделанных в
-							весьма непочтительной, карикатурной манере, и в этой забаве вскоре достиг совершенства. В пятнадцать лет Моне был известен всему Гавру как карикатурист.
 						</p>
 					</div>
 				</div>
