--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="css/about.css">
 	<link rel="stylesheet" href="css/gallery.css">
 	<link rel="stylesheet" href="css/catalog.css">
+	<link rel="stylesheet" href="css/events.css">
 	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-regular.woff2" as="font" type="font/woff2">
 	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-600.woff2" as="font" type="font/woff2">
 	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-700.woff2" as="font" type="font/woff2">
@@ -156,8 +157,8 @@
 						<option value="painting">Живопись</option>
 					</select>
 				</form>
-				<div class="swiper-container">
-					<div class="swiper-wrapper">
+				<div class="swiper-container gallery-swiper">
+					<div class="swiper-wrapper gallery-swiper__wrapper">
 						<div class="swiper-slide gallery__slide">
 							<img class="gallery__img" src="img/gallery/1.jpg" alt="Картина">
 						</div>
@@ -250,9 +251,9 @@
 						</div>
 					</div>
 					<div class="pagination gallery__pagination">
-						<div class="swiper-button-prev pagination__button selectable link-reset"></div>
-						<div class="swiper-pagination"></div>
-						<div class="swiper-button-next pagination__button selectable link-reset"></div>
+						<div class="swiper-button-prev gallery-swiper__button-prev pagination__button selectable link-reset"></div>
+						<div class="swiper-pagination gallery-swiper__pagination"></div>
+						<div class="swiper-button-next gallery-swiper__button-next pagination__button selectable link-reset"></div>
 					</div>
 				</div>
 				<p class="paragraph gallery__paragraph text-block-reset">
@@ -638,6 +639,72 @@
 						<p class="artist-details__text text-block-reset">
 						</p>
 					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="events">
+			<div class="container">
+				<h2 class="heading events__heading text-block-reset">События</h2>
+				<div class="swiper-container events-swiper">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide event-card">
+							<picture class="event-card__picture">
+								<source media="(min-width: 1650px)" srcset="img/events/1-large.jpg">
+								<img class="event-card__img" src="img/events/1-small.jpg" alt="Книжная гравюра">
+							</picture>
+							<p class="event-card__small-text text-block-reset">Музей им. Щусева<br>с 20 марта по 30 апреля</p>
+							<h3 class="event-card__heading text-block-reset">Книжная гравюра в живом восприятии</h3>
+							<p class="event-card__text text-block-reset">Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили
+								его брат Давид и сын Ридольфо. Глава...</p>
+							<a class="event-card__link selectable link-reset" href="#">Подробнее</a>
+						</div>
+						<div class="swiper-slide event-card">
+							<picture class="event-card__picture">
+								<source media="(min-width: 1650px)" srcset="img/events/2-large.jpg">
+								<img class="event-card__img" src="img/events/2-small.jpg" alt="Книжная гравюра">
+							</picture>
+							<p class="event-card__small-text text-block-reset">Музей им. Щусева<br>с 20 марта по 30 апреля</p>
+							<h3 class="event-card__heading text-block-reset">Книжная гравюра в живом восприятии</h3>
+							<p class="event-card__text text-block-reset">Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили
+								его брат Давид и сын Ридольфо. Глава...</p>
+							<a class="event-card__link selectable link-reset" href="#">Подробнее</a>
+						</div>
+						<div class="swiper-slide event-card">
+							<picture class="event-card__picture">
+								<source media="(min-width: 1650px)" srcset="img/events/3-large.jpg">
+								<img class="event-card__img" src="img/events/3-small.jpg" alt="Книжная гравюра">
+							</picture>
+							<p class="event-card__small-text text-block-reset">Музей им. Щусева<br>с 20 марта по 30 апреля</p>
+							<h3 class="event-card__heading text-block-reset">Книжная гравюра в живом восприятии</h3>
+							<p class="event-card__text text-block-reset">Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили
+								его брат Давид и сын Ридольфо. Глава...</p>
+							<a class="event-card__link selectable link-reset" href="#">Подробнее</a>
+						</div>
+						<div class="swiper-slide event-card">
+							<picture class="event-card__picture">
+								<source media="(min-width: 1650px)" srcset="img/events/4-large.jpg">
+								<img class="event-card__img" src="img/events/4-small.jpg" alt="Книжная гравюра">
+							</picture>
+							<p class="event-card__small-text text-block-reset">Музей им. Щусева<br>с 20 марта по 30 апреля</p>
+							<h3 class="event-card__heading text-block-reset">Книжная гравюра в живом восприятии</h3>
+							<p class="event-card__text text-block-reset">Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили
+								его брат Давид и сын Ридольфо. Глава...</p>
+							<a class="event-card__link selectable link-reset" href="#">Подробнее</a>
+						</div>
+						<div class="swiper-slide event-card">
+							<picture class="event-card__picture">
+								<source media="(min-width: 1650px)" srcset="img/events/5-large.jpg">
+								<img class="event-card__img" src="img/events/5-small.jpg" alt="Книжная гравюра">
+							</picture>
+							<p class="event-card__small-text text-block-reset">Музей им. Щусева<br>с 20 марта по 30 апреля</p>
+							<h3 class="event-card__heading text-block-reset">Книжная гравюра в живом восприятии</h3>
+							<p class="event-card__text text-block-reset">Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили
+								его брат Давид и сын Ридольфо. Глава...</p>
+							<a class="event-card__link selectable link-reset" href="#">Подробнее</a>
+						</div>
+					</div>
+					<div class="swiper-pagination events-swiper__pagination"></div>
 				</div>
 			</div>
 		</section>
