--- a/index.html
+++ b/index.html
@@ -647,65 +647,75 @@
 			<div class="container">
 				<h2 class="heading events__heading text-block-reset">События</h2>
 				<div class="swiper-container events-swiper">
-					<div class="swiper-wrapper">
+					<div class="swiper-wrapper events-swiper__wrapper">
 						<div class="swiper-slide event-card">
 							<picture class="event-card__picture">
 								<source media="(min-width: 1650px)" srcset="img/events/1-large.jpg">
 								<img class="event-card__img" src="img/events/1-small.jpg" alt="Книжная гравюра">
 							</picture>
 							<p class="event-card__small-text text-block-reset">Музей им. Щусева<br>с 20 марта по 30 апреля</p>
-							<h3 class="event-card__heading text-block-reset">Книжная гравюра в живом восприятии</h3>
-							<p class="event-card__text text-block-reset">Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили
-								его брат Давид и сын Ридольфо. Глава...</p>
+							<div class="event-card__text-wrap">
+								<h3 class="event-card__heading text-block-reset">Книжная гравюра в живом восприятии</h3>
+								<p class="event-card__text text-block-reset">Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили
+									его брат Давид и сын Ридольфо. Глава...</p>
+							</div>
 							<a class="event-card__link selectable link-reset" href="#">Подробнее</a>
 						</div>
 						<div class="swiper-slide event-card">
 							<picture class="event-card__picture">
 								<source media="(min-width: 1650px)" srcset="img/events/2-large.jpg">
-								<img class="event-card__img" src="img/events/2-small.jpg" alt="Книжная гравюра">
+								<img class="event-card__img" src="img/events/2-small.jpg" alt="«Открытая дискуссия»">
 							</picture>
-							<p class="event-card__small-text text-block-reset">Музей им. Щусева<br>с 20 марта по 30 апреля</p>
-							<h3 class="event-card__heading text-block-reset">Книжная гравюра в живом восприятии</h3>
-							<p class="event-card__text text-block-reset">Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили
-								его брат Давид и сын Ридольфо. Глава...</p>
+							<p class="event-card__small-text text-block-reset">ММОМА<br>24 марта 19:00</p>
+							<div class="event-card__text-wrap">
+								<h3 class="event-card__heading text-block-reset">«Открытая дискуссия». Дмитрий Петров и Сергей Ильин.</h3>
+								<p class="event-card__text text-block-reset">Высокий уровень вовлечения представителей целевой аудитории является четким
+									доказательством простого факта: постоянный...</p>
+							</div>
 							<a class="event-card__link selectable link-reset" href="#">Подробнее</a>
 						</div>
-						<div class="swiper-slide event-card">
+						<div class="swiper-slide event-card event-card_third">
 							<picture class="event-card__picture">
 								<source media="(min-width: 1650px)" srcset="img/events/3-large.jpg">
-								<img class="event-card__img" src="img/events/3-small.jpg" alt="Книжная гравюра">
+								<img class="event-card__img" src="img/events/3-small.jpg" alt="Выставка «Формация 2020»">
 							</picture>
-							<p class="event-card__small-text text-block-reset">Музей им. Щусева<br>с 20 марта по 30 апреля</p>
-							<h3 class="event-card__heading text-block-reset">Книжная гравюра в живом восприятии</h3>
-							<p class="event-card__text text-block-reset">Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили
-								его брат Давид и сын Ридольфо. Глава...</p>
+							<p class="event-card__small-text text-block-reset">Еврейский музей<br>с 31 марта по 21 апреля</p>
+							<div class="event-card__text-wrap">
+								<h3 class="event-card__heading text-block-reset">Выставка «Формация 2020»</h3>
+								<p class="event-card__text text-block-reset">Идейные соображения высшего порядка, а также современная методология разработки играет важную роль в
+									формировании глубокомысленных рассуждений. Также как перспективное...</p>
+							</div>
 							<a class="event-card__link selectable link-reset" href="#">Подробнее</a>
 						</div>
-						<div class="swiper-slide event-card">
+						<div class="swiper-slide event-card event-card_last">
 							<picture class="event-card__picture">
 								<source media="(min-width: 1650px)" srcset="img/events/4-large.jpg">
-								<img class="event-card__img" src="img/events/4-small.jpg" alt="Книжная гравюра">
+								<img class="event-card__img" src="img/events/4-small.jpg" alt="XXIV Международная биеннале молодого искусства">
 							</picture>
-							<p class="event-card__small-text text-block-reset">Музей им. Щусева<br>с 20 марта по 30 апреля</p>
-							<h3 class="event-card__heading text-block-reset">Книжная гравюра в живом восприятии</h3>
-							<p class="event-card__text text-block-reset">Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили
-								его брат Давид и сын Ридольфо. Глава...</p>
+							<p class="event-card__small-text text-block-reset">Третьяковка на Крымском валу<br>с 30 марта по 30 апреля</p>
+							<div class="event-card__text-wrap">
+								<h3 class="event-card__heading text-block-reset">XXIV Международная биеннале молодого искусства</h3>
+								<p class="event-card__text text-block-reset">Внезапно, реплицированные с зарубежных источников, современные исследования представляют собой не...</p>
+							</div>
 							<a class="event-card__link selectable link-reset" href="#">Подробнее</a>
 						</div>
-						<div class="swiper-slide event-card">
+						<div class="swiper-slide event-card event-card_last">
 							<picture class="event-card__picture">
 								<source media="(min-width: 1650px)" srcset="img/events/5-large.jpg">
 								<img class="event-card__img" src="img/events/5-small.jpg" alt="Книжная гравюра">
 							</picture>
-							<p class="event-card__small-text text-block-reset">Музей им. Щусева<br>с 20 марта по 30 апреля</p>
-							<h3 class="event-card__heading text-block-reset">Книжная гравюра в живом восприятии</h3>
-							<p class="event-card__text text-block-reset">Один из ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили
-								его брат Давид и сын Ридольфо. Глава...</p>
+							<p class="event-card__small-text text-block-reset">ММАМ<br>с 8 апреля по 20 мая</p>
+							<div class="event-card__text-wrap">
+								<h3 class="event-card__heading text-block-reset">Джон Винзор. Фотографии из серии «Метафора серебра»</h3>
+								<p class="event-card__text text-block-reset">Один из ведущих флорентийских художников Кватроченто, основатель художественной
+									династии, которую продолжили его брат Давид и сын...</p>
+							</div>
 							<a class="event-card__link selectable link-reset" href="#">Подробнее</a>
 						</div>
 					</div>
 					<div class="swiper-pagination events-swiper__pagination"></div>
 				</div>
+				<button class="events-enable-btn selectable link-reset">Все события</button>
 			</div>
 		</section>
 	</main>
