italian artists, select rework

--- a/index.html
+++ b/index.html
@@ -144,17 +144,10 @@
 				<h2 class="heading gallery__heading text-block-reset">Галерея</h2>
 				<form class="gallery-form">
 					<h3 class="gallery-form__heading text-block-reset">Фильтровать по:</h3>
-					<select class="selectric selectric_top" name="author">
-						<option disabled selected>Автор</option>
-						<option value="malevich">Малевич</option>
-					</select>
-					<select class="selectric selectric_middle" name="style">
-						<option disabled selected>Направление</option>
-						<option value="avantgarde">Авангард</option>
-					</select>
-					<select class="selectric selectric_bottom" name="technique">
-						<option disabled selected>Техника</option>
-						<option value="painting">Живопись</option>
+					<select class="selectric" name="author">
+						<option>Автор</option>
+						<option>Направление</option>
+						<option>Техника</option>
 					</select>
 				</form>
 				<div class="swiper-container gallery-swiper">
@@ -347,30 +340,12 @@
 						</div>
 						<div>
 							<ul class="artists-catalog__list ul-reset">
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бенедетто ди Биндо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бергоньоне, Амброджо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Биссоло, Франческо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Больтраффио, Джованни</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бонсиньори, Франческо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Боттичини, Рафаэлло</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Брамантино</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бреа, Людовико</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бьяджо д’Антонио Туччи</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Веккьетта</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Андреа Верроккьо</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="diBindo">Бенедетто ди Биндо</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="bergognone">Бергоньоне, Амброджо</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="verrocchio">Андреа Верроккьо</a></li>
 								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="girlandaio">Доменико Гирландайо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Беноццо Гоццоли</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Граначчи, Франческо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Грегорио ди Чекко</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Джованни да Удине</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Джованни ди Паоло</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Джорджоне</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Парентино, Бернардо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Пезеллино</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Пьетро Перуджино</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Перуцци, Бальдассаре</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Пизанелло</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Пинтуриккьо</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="giorgione">Джорджоне</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="parentino">Парентино, Бернардо</a></li>
 							</ul>
 						</div>
 						<div class="artists-catalog__subsection">
