catalog links animation

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="diBindo">Бенедетто ди Биндо</a></li>
 								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="bergognone">Бергоньоне, Амброджо</a></li>
 								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="verrocchio">Андреа Верроккьо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="girlandaio">Доменико Гирландайо</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset selected" href="#catalog" id="girlandaio">Доменико Гирландайо</a></li>
 								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="giorgione">Джорджоне</a></li>
 								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="parentino">Парентино, Бернардо</a></li>
 							</ul>
