--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="css/gallery.css">
 	<link rel="stylesheet" href="css/catalog.css">
 	<link rel="stylesheet" href="css/events.css">
+	<link rel="stylesheet" href="css/publications.css">
 	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-regular.woff2" as="font" type="font/woff2">
 	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-600.woff2" as="font" type="font/woff2">
 	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-700.woff2" as="font" type="font/woff2">
@@ -365,30 +366,9 @@
 						</div>
 						<div>
 							<ul class="artists-catalog__list ul-reset">
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бенедетто ди Биндо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бергоньоне, Амброджо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Биссоло, Франческо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Больтраффио, Джованни</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бонсиньори, Франческо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Боттичини, Рафаэлло</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Брамантино</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бреа, Людовико</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Бьяджо д’Антонио Туччи</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Веккьетта</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Андреа Верроккьо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Доменико Гирландайо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Беноццо Гоццоли</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Граначчи, Франческо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Грегорио ди Чекко</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Джованни да Удине</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Джованни ди Паоло</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Джорджоне</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Парентино, Бернардо</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Пезеллино</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Пьетро Перуджино</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Перуцци, Бальдассаре</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Пизанелло</a></li>
-								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#">Пинтуриккьо</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="carracci">Аннибале Карраччи</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="fetti">Доменико Фетти</a></li>
+								<li class="artists-catalog__item"><a class="artists-catalog__link selectable link-reset" href="#catalog" id="reni">Гвидо Рени</a></li>
 							</ul>
 						</div>
 						<div class="artists-catalog__subsection">
@@ -680,6 +660,100 @@
 					<div class="swiper-pagination events-swiper__pagination"></div>
 				</div>
 				<button class="events-enable-btn selectable link-reset">Все события</button>
+			</div>
+		</section>
+
+		<section class="publications">
+			<div class="container">
+				<h2 class="heading publications__heading text-block-reset">Издания</h2>
+				<form class="publications-form" action="#">
+					<fieldset class="categories-fieldset">
+						<legend class="categories-fieldset__legend">Категории</legend>
+						<label class="categories-fieldset__checkbox checkbox">
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Бестселлеры
+						</label>
+						<label class="categories-fieldset__checkbox checkbox">
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Искусство
+						</label>
+						<label class="categories-fieldset__checkbox checkbox">
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Архитектура
+						</label>
+						<label class="categories-fieldset__checkbox checkbox">
+							<input class="checkbox__input" type="checkbox" checked>
+							<span class="checkbox__box"></span>
+							Дизайн
+						</label>
+						<label class="categories-fieldset__checkbox checkbox">
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Мода
+						</label>
+						<label class="categories-fieldset__checkbox checkbox">
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Детям
+						</label>
+						<label class="categories-fieldset__checkbox checkbox">
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Художественная литература
+						</label>
+						<label class="categories-fieldset__checkbox checkbox">
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Публицистика
+						</label>
+						<label class="categories-fieldset__checkbox checkbox">
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Путеводители
+						</label>
+						<label class="categories-fieldset__checkbox checkbox">
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Философия
+						</label>
+						<label class="categories-fieldset__checkbox checkbox">
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Учебная литература
+						</label>
+						<label class="categories-fieldset__checkbox checkbox">
+							<input class="checkbox__input" type="checkbox">
+							<span class="checkbox__box"></span>
+							Журналы и газеты
+						</label>
+					</fieldset>
+					<fieldset>
+						<legend>Цена</legend>
+						<div>
+							<label>От<input type="text"></label>
+							<label>до<input type="text"></label>
+							руб.
+						</div>
+					</fieldset>
+				</form>
+				<div class="swiper-container publications-swiper">
+					<div class="swiper-wrapper publications-swiper__wrapper">
+						<div class="swiper-slide publication-card">
+							<picture class="publication-card__picture">
+								<source media="(min-width: 1650px)" srcset="img/publications/1-desktop.jpg">
+								<source media="(min-width: 768px)" srcset="img/publications/1-tablet.jpg">
+								<img class="publication-card__img" src="img/publications/1-mobile.jpg" alt="Искусство цвета">
+							</picture>
+							<h4>Искусство цвета</h4>
+							<p>Иттен, Иоханнес</p>
+							<p>620 руб</p>
+							<button>Заказать</button>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 	</main>
