categories list rework

--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
 							<span class="checkbox__box"></span>
 							Архитектура
 						</label>
-						<label class="categories-fieldset__checkbox checkbox">
+						<label class="categories-fieldset__checkbox checkbox active">
 							<input class="checkbox__input" type="checkbox" checked>
 							<span class="checkbox__box"></span>
 							Дизайн
